--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-links">
             <a href="#">header link one</a>
             <a href="#">header line two</a>
-            <a href="#">header linke three</a>
+            <a href="#">header link three</a>
         </div>
         <div class="header-title">
             <p>This website is awesome</p>
@@ -41,7 +41,7 @@
             <div class="subtext">this is some subtext under an illustration or an image</div>
         </div>
     </div>
-    <div class="quote-section"
+    <div class="quote-section">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="author">-Thor, God of Thunder</div>
     </div>
