--- a/index.html
+++ b/index.html
@@ -6,50 +6,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-logo">
-            <p>Header Logo</p>
-        </div>
-        <div class="header-links">
-            <a href="#">header link one</a>
-            <a href="#">header line two</a>
-            <a href="#">header link three</a>
-        </div>
-        <div class="header-title">
-            <p>This website is awesome</p>
-            <div class="header-title-subtext">
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+    <div class="contents">
+        <div class="header">
+            <div class="header-top">
+                <div class="header-logo">Header Logo</div>
+                <div class="header-links">
+                    <a href="#">header link one</a>
+                    <a href="#">header line two</a>
+                    <a href="#">header link three</a>
+                </div>
             </div>
-            <button>Sign up</button>
+            <div class="header-bot">
+                <div class="header-bot-text">
+                    <div class="header-title">This website is awesome</div>
+                    <div class="header-title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <button>Sign up</button>
+                </div>
+                <div class="photo">
+                    <img src="./images/piano.jpeg" alt="">
+                </div>
+            </div>
         </div>
-        <img src="https://www.pexels.com/photo/hands-immersing-in-sink-with-water-11182884/" alt="">
-    </div>
-    <div class="midline">
-        <div class="midline-title">
-            <p>Some random information.</p>
+        <div class="midline">
+            <div class="midline-title">
+                <p>Some random information.</p>
+            </div>
+            <div class="icon-set">
+                <div class="icon">
+                    <div class="icon-border"></div>
+                    <div class="subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="icon">
+                    <div class="subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="icon">
+                    <div class="subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="icon">
+                    <div class="subtext">this is some subtext under an illustration or an image</div>
+                </div>
+            </div>
         </div>
-        <div class="icon">
-            <div class="subtext">this is some subtext under an illustration or an image</div>
+        <div class="quote-section">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
         </div>
-        <div class="icon">
-            <div class="subtext">this is some subtext under an illustration or an image</div>
-        </div>
-        <div class="icon">
-            <div class="subtext">this is some subtext under an illustration or an image</div>
-        </div>
-        <div class="icon">
-            <div class="subtext">this is some subtext under an illustration or an image</div>
-        </div>
-    </div>
-    <div class="quote-section">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="author">-Thor, God of Thunder</div>
-    </div>
-    <div class="signup-section">
-        <div class="container">
-            <div class="container-title">Call to action! It's time!</div>
-            <div class="container-subtex">Sign up for our product by clicking that button right over there!</div>
-            <button>Sign up</button>
+        <div class="signup-section">
+            <div class="container">
+                <div class="container-text">
+                    <div class="container-title">Call to action! It's time!</div>
+                    <div class="container-subtex">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
