--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header-bot-text">
                     <div class="header-title">This website is awesome</div>
                     <div class="header-title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                    <button>Sign up</button>
+                    <button id="header-button">Sign up</button>
                 </div>
                 <div class="photo">
                     <img src="./images/piano.jpeg" alt="">
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="footer">
-        Alan Cho
+        Alan Cho & The Odin Project
     </div>
 </body>
 </html>
