--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
                     <div class="subtext">this is some subtext under an illustration or an image</div>
                 </div>
                 <div class="icon">
+                    <div class="icon-border"></div>
                     <div class="subtext">this is some subtext under an illustration or an image</div>
                 </div>
                 <div class="icon">
+                    <div class="icon-border"></div>
                     <div class="subtext">this is some subtext under an illustration or an image</div>
                 </div>
                 <div class="icon">
+                    <div class="icon-border"></div>
                     <div class="subtext">this is some subtext under an illustration or an image</div>
                 </div>
             </div>
