Changed font in style.css

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="footer">
-        Alan Cho & The Odin Project
+        Alan Cho & © The Odin Project 
     </div>
 </body>
 </html>
